Fix z-index

--- a/css/main.css
+++ b/css/main.css
@@ -5215,6 +5215,7 @@ nav li a.current, nav li a:hover {
   background: transparent;
 }
 .zoe-effect figcaption {
+  z-index:99999;
   position: absolute;
   bottom: 0;
   width: 100%;
